<resources>
    <string name="app_name">Notepad App</string>
    <string name="note_add_button">Note Add Button</string>
    <string name="myNotes">My Notes</string>
    <string name="calendar">Calendar</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_header_area">NOTE HEADER AREA</string>
    <string name="note_content_area">NOTE CONTENT AREA</string>
    <string name="alarm">Alarm</string>
    <string name="lock">Lock</string>
    <string name="type_note_name">Type a note name</string>
    <string name="selected_item">deneme</string>
    <string name="note_save_button">Note Save Button</string>
    <string name="delete_alert_title">Are you sure?</string>
    <string name="delete_alert_message">You won\'t be able ro revert this!</string>
    <string name="delete_alert_positive_button">Yes, delete it!</string>
    <string name="delete_alert_negative_button">Cancel</string>
    <string name="note_name_too_long_message">Note name too long!</string>
    <string name="note_name_is_not_empty">Note name is not empty!</string>
    <string name="note_importance_is_not_empty">Note importance/urgency is not empty!</string>
    <string name="choose_note_importance_level">Choose note\'s importance/urgency</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="choose_a_time">Choose a time</string>
    <string name="type_lock_password">Type a lock password</string>
    <string name="error_message">Oops, something went wrong. Please try again later and report it.</string>


    <string-array name="importanceLevel">
        <item>Normal</item>
        <item>Urgent</item>
        <item>Important</item>
        <item>Important &amp; Urgent</item>
    </string-array>


</resources>